testsuite/tests/typecheck/should_compile/T11319.hs
{-# LANGUAGE ImpredicativeTypes #-}

module T11319 where

f :: Monad m => m (Maybe a)
f = return Nothing
