testsuite/tests/typecheck/should_fail/tcfail208.hs
module Ctx where

f :: (Monad m, Eq a) => a -> m a -> Bool
f x y = (return x == y)

